Fixed terrain alignment!

--- a/app/components/MapComponent.module.css
+++ b/app/components/MapComponent.module.css
@@ -1,84 +1,153 @@
 .movepadContainer {
-  width: 240px;
-  height: 240px;
-  border: thin solid black;
-  border-radius: 10px;
-  background-color: antiquewhite;
-  color: black;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(80px, auto);
-  overflow: hidden;
+    width: 240px;
+    height: 240px;
+    border: thin solid black;
+    border-radius: 10px;
+    background-color: antiquewhite;
+    color: black;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(80px, auto);
+    overflow: hidden;
 }
 
 .buttonContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 8px;
-  width: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    width: 80px;
 }
 
 .button {
-  font-size: 50px;
-  border: none;
-  scale: 1.0;
-  background-color: rgba(0,0,0,0);
-  font-weight: bolder;
+    font-size: 50px;
+    border: none;
+    scale: 1.0;
+    background-color: rgba(0, 0, 0, 0);
+    font-weight: bolder;
 }
 
 .button:hover {
-  scale: 1.2;
-  cursor: pointer;
+    scale: 1.2;
+    cursor: pointer;
 }
 
 
+.mapControlsContainer {
+    float: left;
+    width: 48%;
+    padding: 10px;
+    text-align: center;
+    max-width: 90vw;
+    /*margin: 0 auto;*/
+}
 
+.infoContainer {
+    float: right;
+    width: 100%;
+    max-width: 80vw;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: rgb(200, 200, 200);
+    align-items: center;
+}
+
+.link {
+    display: block;
+    color: blue;
+    textDecoration: underline;
+}
 
 .altButton {
-  font-size: 35px;
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
+    font-size: 35px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
 }
 
 .altButton > * {
-  display: inline-block;
+    display: inline-block;
 
 }
 
 .disabledButtonStyle {
-  border-radius: 10px;
-  border: thin solid black;
-  padding: 5px;
-  margin: 0 auto;
-  text-decoration: line-through;
-  pointer-events: None
+    font-size: 20px;
+    display: block;
+    border-radius: 10px;
+    border: thin solid black;
+    padding: 5px;
+    /*margin: 0 auto;*/
+    text-decoration: line-through;
+    pointer-events: None
 }
 
 .enabledButtonStyle {
-  border-radius: 10px;
-  border: thin solid black;
-  padding: 5px;
-  margin: 0 auto;
-}
+    display: block;
 
+    border-radius: 10px;
+    border: thin solid black;
+    padding: 5px;
+    margin: 0 auto;
+}
 
 
 .locationList {
-  list-style: none;
+    list-style: none;
 }
+
 .locationListItem {
-  display: inline-block;
-  border-radius: 5px;
-  padding: 5px;
-  margin: 10px;
-  border: thin solid black;
-  scale: 1.0;
-  cursor: pointer;
+    display: inline-block;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 10px;
+    border: thin solid black;
+    scale: 1.0;
+    cursor: pointer;
 }
+
 .locationListItem:hover {
-  scale: 1.1;
+    scale: 1.1;
+}
+
+.in {
+    width: 70px
+}
+
+.spacer {
+    display: inline-block;
+    width: 70px;
+}
+
+.latitudeHeader {
+    display: block;
+    position: absolute;
+    top : 0px;
+    /*top : -10px;*/
+    left: calc(50% - 60px);
+}
+
+.longitudeHeader {
+    position: absolute;
+    left : 25px;
+    bottom: 0;
+    display: block;
+    transform: rotate(-90deg);
+    transform-origin: bottom left;
+    -webkit-transform: rotate(-90deg);
+    -webkit-transform-origin: bottom left;
+    -moz-transform: rotate(-90deg);
+    -mox-transform-origin: bottom left;
+    -ms-transform: rotate(-90deg);
+    -ms-transform-origin: bottom left;
+    -o-transform: rotate(-90deg);
+    -o-transform-origin: bottom left;
+}
+
+.inputContainer {
+    position: relative;
+    padding: 40px;
+    display: inline-block;
+    margin-bottom: 30px;
 }
