--- a/app/globals.css
+++ b/app/globals.css
@@ -79,17 +79,14 @@
   margin: 0;
 }
 
-html,
-body {
+html, body {
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
+  background: linear-gradient(to bottom, transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
@@ -111,22 +108,11 @@ div {
   margin: 0 auto;
 }
 
-
-.cell {
-  display: inline-block;
-  width: 3px;
-  height: 3px;
-  /*background-color: black;*/
-  /*border:thin solid white;*/
-  margin-right: 1px;
-}
-
-.cellContainer {
-  /*margin: 20px;*/
-  line-height: 3px;
-  background: rgb(50 50 50);
-  max-width: 80vw;
-
-  width: 800px;
-  height: 800px;
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10vw;
+  min-height: 100vh;
 }
